# Romagnetics_FS-404

./: .gitignore  README.md
.github/workflows/: macos-test-prebuilt.yml  macos.yml
02_Android Program/: FS_404_Arduino.ino
02_Arduino Program/: FS_404_Arduino.ino
02_Arduino Program/FS_404_Arduino/: FS_404_Arduino.ino
03_Computer Program/Mac_executable/FS-404.app/Contents/: Info.plist
03_Computer Program/Mac_executable/FS-404.app/Contents/Frameworks/QtDBus.framework/Versions/A/: QtDBus
03_Computer Program/Mac_executable/FS-404.app/Contents/Frameworks/QtSerialPort.framework/Versions/A/: QtSerialPort
03_Computer Program/Mac_executable/FS-404.app/Contents/Frameworks/QtSvg.framework/Versions/A/: QtSvg
03_Computer Program/Mac_executable/FS-404.app/Contents/MacOS/: FS-404
03_Computer Program/Mac_executable/FS-404.app/Contents/PlugIns/iconengines/: libqsvgicon.dylib
03_Computer Program/Mac_executable/FS-404.app/Contents/PlugIns/imageformats/: libqgif.dylib  libqico.dylib  libqjpeg.dylib
03_Computer Program/Mac_executable/FS-404.app/Contents/PlugIns/styles/: libqmacstyle.dylib
03_Computer Program/src/: CMakeLists.txt  fs404notes.cpp  midi.cpp  midi_note.cpp  midi_note.h  note_interface.cpp  note_interface.h  note_interface.ui  serial.cpp  widget.cpp  widget.h  widget.ui
